--- a/us.html
+++ b/us.html
@@ -1,136 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GURFC|About</title>
-    <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/2601b20e92.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!--navigation bar-->
     <nav class="navbar">
-        <div class="navbar__container">
-            <div class="navbar__wide">
-                <a href="index.html" id="navbar__logo">
-                    <img src="images/logo.png" width="80" height="80">
-                </a>
-                <ul class="navbar__menu">
-                    <li class="navbar__item">
-                        <a href="shop.html" class="navbar__links">Shop</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="us.html" class="navbar__links">About</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="roster.html" class="navbar__links">Roster</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="match.html" class="navbar__links">Watch</a>    
-                    </li>
-                    <li class="navbar__btn">
-                        <a href="watch.html" class="button">Join GURFC</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="navbar__toggle" id="mobile-menu">
-                <br>
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+      <div class="navbar__container">
+        <div class="navbar__wide">
+          <a href="index.html" id="navbar__logo">
+            <img src="images/logo.png" width="80" height="80" />
+          </a>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="shop.html" class="navbar__links">Shop</a>
+            </li>
+            <li class="navbar__item">
+              <a href="us.html" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+              <a href="roster.html" class="navbar__links">Roster</a>
+            </li>
+            <li class="navbar__item">
+              <a href="match.html" class="navbar__links">Watch</a>
+            </li>
+            <li class="navbar__btn">
+              <a href="watch.html" class="button">Join GURFC</a>
+            </li>
+          </ul>
         </div>
+        <div class="navbar__toggle" id="mobile-menu">
+          <br />
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </div>
     </nav>
     <!-- About Section -->
-        <div class="watch__body">
-            <div class="about__header">
-                <h1>About Us</h1>
+    <div class="watch__body">
+      <div class="about__header">
+        <h1>About Us</h1>
+      </div>
+      <div class="about__main">
+        <div class="about__container">
+          <div class="about__content">
+            <h2>Our History</h2>
+            <p>
+              Founded in 1967, Georgetown University Rugby Football Club is a
+              club sport team that has competed at the highest levels of
+              collegiate rugby since its inception. The team competes in the
+              Mid-Atlantic Rugby Conference in Division II of National
+              Collegiate Rugby. Our team carries the values of our institution
+              onto the rugby field, and vice versa. The team culture that has
+              been passed on from class to class continues because of the active
+              involvement of our alumni network. They play an active role
+              supporting the next generation of Hoyas in their rugby and
+              professional careers.
+            </p>
+            <div class="abt-imgs">
+              <img src="images/PD.jpeg" id="abtimg" />
+              <img src="images/uncs.png" id="abtimg2" />
             </div>
-            <div class="about__main">
-                <div class="about__container">
-                        <div class="about__content">
-                            <h2>Our History</h2>
-                            <p>Founded in 1967, Georgetown University Rugby Football Club is a club sport team that has competed at the highest levels of collegiate rugby since its inception. The team competes in the Mid-Atlantic Rugby Conference in Division II of National Collegiate Rugby. Our team carries the values of our institution onto the rugby field, and vice versa. The team culture that has been passed on from class to class continues because of the active involvement of our alumni network. They play an active role supporting the next generation of Hoyas in their rugby and professional careers.</p>
-                            <div class="abt-imgs">
-                                <img src="images/PD.jpeg" id="abtimg">
-                                <img src="images/uncs.png" id="abtimg2">
-                            </div>
-                        </div>
-                </div>
-                <hr>
-                <div class="Slideshow">
-                    <div class="about__content2">
-                        <div class="Slides fade">
-                             <div class="SlideTitle">
-                                    <h2>Our Commitment to Inclusivity</h2>
-                            </div>
-                            <img src="images/include.jpg"  class="ssimg">
-                            <div class="caption">
-                                    <p>Inclusivity is at the heart of everything we do. Rugby is for everyone, regardless of experience or background. Our club is a welcoming space where individuals from diverse walks of life come together, united by their love for the game.
-                                            We embrace and celebrate the richness of different perspectives and identities in our community. Whether you're a seasoned player or stepping onto the field for the first time, GURFC is your home.</p>
-                            </div>
-                        </div>
-                        <div class="Slides fade">
-                            <div class="SlideTitle">
-                                        <h2>Developing Athletes, Building Leaders</h2>
-                            </div>
-                            <img src="images/athlete.jpeg"  class="ssimg">
-                            <div class="caption">
-                                            <p>GURFC is more than a sports team; it's a platform for personal growth and leadership development.
-                                            Through our rigorous training sessions, our coaching staff not only hones players' rugby skills but also instills values like discipline, resilience, and teamwork. We encourage our members to take on leadership roles on and off the field, fostering a culture of accountability and empowerment. The lessons learned on the pitch translate into life skills that extend far beyond the game.</p>
-                            </div>
-                        </div>
-                        <div class="Slides fade">
-                            <div class="SlideTitle">
-                                        <h2>Beyond Rugby: A Community of Support</h2>
-                            </div>
-                            <img src="images/fwd.jpg"  class="ssimg">
-                            <div class="caption">
-                                            <p>Joining GURFC means gaining a support network that extends beyond the game itself. Our members are dedicated to supporting one another academically, physically, and personally.
-                                            From study groups and fitness sessions to being there for each other through life's challenges, GURFC fosters an environment where teammates become lifelong friends. Our community is one where bonds forged on the field translate into lasting relationships and a sense of belonging that lasts well beyond college.</p>
-                            </div>
-                        </div>
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    </div>
-                    <br>
-                    <div style="text-align: center">
-                                <span class="dot" onclick="currentSlide(1)"></span>
-                                <span class="dot" onclick="currentSlide(2)"></span>
-                                <span class="dot" onclick="currentSlide(3)"></span>
-                    </div>
-                </div>
-                    <hr>
-                <div class="about__content3">
-                        <h2>Embracing Tradition</h2>
-                        <p>As a part of GURFC, you're not just joining a team but becoming part of a rich tradition. We take pride in our history, honoring the legacy of those who have worn our jersey before us. From game-day rituals to alumni events, we cherish the traditions that define our club.
-                                Moreover, we're committed to creating new memories and experiences for our members, ensuring that every season brings moments that will be cherished for a lifetime.</p>
-                        <iframe width="500" height="315" src="https://www.youtube.com/embed/M8ItVtysA5o?si=OM4Yzymn_uKCERls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
-            </div>
+          </div>
         </div>
+        <hr />
+        <div class="Slideshow">
+          <div class="about__content2">
+            <div class="Slides fade">
+              <div class="SlideTitle">
+                <h2>Our Commitment to Inclusivity</h2>
+              </div>
+              <img src="images/include.jpg" class="ssimg" />
+              <div class="caption">
+                <p>
+                  Inclusivity is at the heart of everything we do. Rugby is for
+                  everyone, regardless of experience or background. Our club is
+                  a welcoming space where individuals from diverse walks of life
+                  come together, united by their love for the game. We embrace
+                  and celebrate the richness of different perspectives and
+                  identities in our community. Whether you're a seasoned player
+                  or stepping onto the field for the first time, GURFC is your
+                  home.
+                </p>
+              </div>
+            </div>
+            <div class="Slides fade">
+              <div class="SlideTitle">
+                <h2>Developing Athletes, Building Leaders</h2>
+              </div>
+              <img src="images/athlete.jpeg" class="ssimg" />
+              <div class="caption">
+                <p>
+                  GURFC is more than a sports team; it's a platform for personal
+                  growth and leadership development. Through our rigorous
+                  training sessions, our coaching staff not only hones players'
+                  rugby skills but also instills values like discipline,
+                  resilience, and teamwork. We encourage our members to take on
+                  leadership roles on and off the field, fostering a culture of
+                  accountability and empowerment. The lessons learned on the
+                  pitch translate into life skills that extend far beyond the
+                  game.
+                </p>
+              </div>
+            </div>
+            <div class="Slides fade">
+              <div class="SlideTitle">
+                <h2>Beyond Rugby: A Community of Support</h2>
+              </div>
+              <img src="images/fwd.jpg" class="ssimg" />
+              <div class="caption">
+                <p>
+                  Joining GURFC means gaining a support network that extends
+                  beyond the game itself. Our members are dedicated to
+                  supporting one another academically, physically, and
+                  personally. From study groups and fitness sessions to being
+                  there for each other through life's challenges, GURFC fosters
+                  an environment where teammates become lifelong friends. Our
+                  community is one where bonds forged on the field translate
+                  into lasting relationships and a sense of belonging that lasts
+                  well beyond college.
+                </p>
+              </div>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          </div>
+          <br />
+          <div style="text-align: center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div>
+        </div>
+        <hr />
+        <div class="about__content3">
+          <h2>Embracing Tradition</h2>
+          <p>
+            As a part of GURFC, you're not just joining a team but becoming part
+            of a rich tradition. We take pride in our history, honoring the
+            legacy of those who have worn our jersey before us. From game-day
+            rituals to alumni events, we cherish the traditions that define our
+            club. Moreover, we're committed to creating new memories and
+            experiences for our members, ensuring that every season brings
+            moments that will be cherished for a lifetime.
+          </p>
+          <iframe
+            width="500"
+            height="315"
+            src="https://www.youtube.com/embed/M8ItVtysA5o?si=OM4Yzymn_uKCERls"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
     <!--Footer Section-->
     <div class="footer__container">
-        <div class="footer__logo">
-                <a href="/" id="footer__logo">
-                        <img src="images/logo.png"
-                        width="80"
-                        height="80">
-                 </a>
-                 <p>©2024 All rights reserved</p>
-        </div>
-        <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-    
-        </div>
-
+      <div class="footer__logo">
+        <a href="/" id="footer__logo">
+          <img src="images/logo.png" width="80" height="80" />
+        </a>
+        <p>©2024 All rights reserved</p>
+      </div>
+      <div class="social__icons">
+        <a href="/" class="social__icon--link" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="/" class="social__icon--link" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="/" class="social__icon--link" target="_blank"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+      </div>
     </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
