--- a/roster.html
+++ b/roster.html
@@ -1,108 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-        <title>GURFC|Roster</title>
-        <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <!--navigation bar-->
-        <nav class="navbar">
-            <div class="navbar__container">
-                <div class="navbar__wide">
-                    <a href="index.html" id="navbar__logo">
-                        <img src="images/logo.png" width="80" height="80">
-                    </a>
-                    <ul class="navbar__menu">
-                        <li class="navbar__item">
-                            <a href="shop.html" class="navbar__links">Shop</a>
-                        </li>
-                        <li class="navbar__item">
-                            <a href="us.html" class="navbar__links">About</a>
-                        </li>
-                        <li class="navbar__item">
-                            <a href="roster.html" class="navbar__links">Roster</a>
-                        </li>
-                        <li class="navbar__item">
-                            <a href="match.html" class="navbar__links">Watch</a>    
-                        </li>
-                        <li class="navbar__btn">
-                            <a href="watch.html" class="button">Join GURFC</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="navbar__toggle" id="mobile-menu">
-                    <br>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
+    <title>GURFC|Roster</title>
+    <script
+      src="https://kit.fontawesome.com/2601b20e92.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!--navigation bar-->
+    <nav class="navbar">
+      <div class="navbar__container">
+        <div class="navbar__wide">
+          <a href="index.html" id="navbar__logo">
+            <img src="images/logo.png" width="80" height="80" />
+          </a>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="shop.html" class="navbar__links">Shop</a>
+            </li>
+            <li class="navbar__item">
+              <a href="us.html" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+              <a href="roster.html" class="navbar__links">Roster</a>
+            </li>
+            <li class="navbar__item">
+              <a href="match.html" class="navbar__links">Watch</a>
+            </li>
+            <li class="navbar__btn">
+              <a href="watch.html" class="button">Join GURFC</a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar__toggle" id="mobile-menu">
+          <br />
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </div>
+    </nav>
+    <!--Hero Section-->
+    <main>
+      <div class="roster__header">
+        <h1>Roster</h1>
+      </div>
+      <div class="roster__container">
+        <div class="card__container">
+          <div class="image-container">
+            <img src="images/logo.png" alt="Player Image" />
+          </div>
+          <div class="profile__container">
+            <div class="profile-header">
+              <h1 class="name">Brodie Lee</h1>
             </div>
-        </nav>
-        <!--Hero Section-->
-        <main>
-            <div class="roster__header">
-                <h1>Roster</h1>
+            <div class="profile-body">
+              <table class="details">
+                <thead>
+                  <tr>
+                    <td class="position">Position:</td>
+                    <td class="year">Year:</td>
+                    <td class="hometown">Hometown:</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="player_position"><b>Lock</b></td>
+                    <td class="player_year">Jr.</td>
+                    <td class="player_hometown">Brookline, MA</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="roster__container">
-                <div class="card__container">
-                    <div class="image-container">
-                        <img src="images/logo.png" alt="Player Image">
-                    </div>
-                    <div class="profile__container">
-                        <div class="profile-header">
-                            <h1 class="name">Brodie Lee</h1>
-                        </div>
-                        <div class="profile-body">
-                            <table class="details">
-                                <thead>
-                                    <tr>
-                                        <td class="position">Position:</td>
-                                        <td class="year">Year:</td>
-                                        <td class="hometown">Hometown:</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="player_position"><b>Lock</b></td>
-                                        <td class="player_year">Jr.</td>
-                                        <td class="player_hometown">Brookline, MA</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <!--javascript-->
-            </div>
-        </main>
-        <!--Footer-->
-        <section>
-            <div class="footer__container">
-                <div class="footer__logo">
-                        <a href="/" id="footer__logo">
-                                <img src="images/logo.png"
-                                width="100"
-                                height="100">
-                        </a>
-                        <p>©2024 All rights reserved</p>
-                </div>
-                <div class="social__icons">
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-            
-                </div>
-
-            </div>
-        </section>
-        <script src="app.js"></script>
-    </body>
+          </div>
+        </div>
+      </div>
+      <div>
+        <!--javascript-->
+      </div>
+    </main>
+    <!--Footer-->
+    <section>
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="/" id="footer__logo">
+            <img src="images/logo.png" width="100" height="100" />
+          </a>
+          <p>©2024 All rights reserved</p>
+        </div>
+        <div class="social__icons">
+          <a href="/" class="social__icon--link" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="/" class="social__icon--link" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="/" class="social__icon--link" target="_blank"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </section>
+    <script src="app.js"></script>
+  </body>
 </html>
