--- a/shop.html
+++ b/shop.html
@@ -1,134 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <title>GURFC|Shop</title>
-    <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/2601b20e92.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!--navigation bar-->
     <nav class="navbar">
-        <div class="navbar__container">
-            <div class="navbar__wide">
-                <a href="index.html" id="navbar__logo">
-                    <img src="images/logo.png" width="80" height="80">
-                </a>
-                <ul class="navbar__menu">
-                    <li class="navbar__item">
-                        <a href="shop.html" class="navbar__links">Shop</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="us.html" class="navbar__links">About</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="roster.html" class="navbar__links">Roster</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="match.html" class="navbar__links">Watch</a>    
-                    </li>
-                    <li class="navbar__btn">
-                        <a href="watch.html" class="button">Join GURFC</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="navbar__toggle" id="mobile-menu">
-                <br>
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+      <div class="navbar__container">
+        <div class="navbar__wide">
+          <a href="index.html" id="navbar__logo">
+            <img src="images/logo.png" width="80" height="80" />
+          </a>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="shop.html" class="navbar__links">Shop</a>
+            </li>
+            <li class="navbar__item">
+              <a href="us.html" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+              <a href="roster.html" class="navbar__links">Roster</a>
+            </li>
+            <li class="navbar__item">
+              <a href="match.html" class="navbar__links">Watch</a>
+            </li>
+            <li class="navbar__btn">
+              <a href="watch.html" class="button">Join GURFC</a>
+            </li>
+          </ul>
         </div>
+        <div class="navbar__toggle" id="mobile-menu">
+          <br />
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </div>
     </nav>
     <section class="shop">
-        <div class="shape">
-            <div class=shop-header>
-                <h1>GURFC</h1>
-                <h2>Shop</h2>
-
-            </div>
+      <div class="shape">
+        <div class="shop-header">
+          <h1>GURFC</h1>
+          <h2>Shop</h2>
         </div>
-        <div class="shop-main">
-            <div class="shop-body1">
-                <a href="https://www.liquidrugby.com/georgetown-university-rfc" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card1">
-                        <h1>Liquid Rugby</h1>
-                        <p>Gear for the team</p>
-                        <img src="images/akuma.webp" class="shop-image">
-                    </div>
-                </a>
-                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card1">
-                        <h1>World Rugby Shop</h1>
-                        <p>Gear for everybody</p>
-                        <img src="images/wrs.webp" class="shop-image">
-                    </div>
-                </a>
-                <a href="" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card1">
-                        <h1>Our Merch</h1>
-                        <p>Coming Soon<p>
-                        <img src="images/merch.webp" class="shop-image">
-                    </div>
-                </a>
+      </div>
+      <div class="shop-main">
+        <div class="shop-body1">
+          <a
+            href="https://www.liquidrugby.com/georgetown-university-rfc"
+            style="text-decoration: none; color: #041e42"
+          >
+            <div class="shop-card1">
+              <h1>Liquid Rugby</h1>
+              <p>Gear for the team</p>
+              <img src="images/akuma.webp" class="shop-image" />
             </div>
-            <br>
-            <h1 style="text-align: center; color:#041e42; font-size: 3rem;">Our Picks</h1>
-            <br>
-            <div class="shop-body2">
-                <a href="https://www.worldrugbyshop.com/products/georgetown-university-rfc-classic-long-sleeve-hooped-rugby-jersey?variant=41751236935777" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card2">
-                        <img src="images/shop1.webp" class="shop-image2">
-                        <h1>Long Sleeve Hooped Rugby Jersey</h1>
-                    </div>
-                </a>
-                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-dry-polo-by-canterbury" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card2">
-                        <img src="images/shop2.jpg" class="shop-image2">
-                        <h1>Canterbury Dry Polo</h1>
-                    </div>
-                </a>
-                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-free-form-rugby-backpack" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card2">
-                        <img src="images/shop3.webp" class="shop-image2">
-                        <h1>GURFC Free Form Rugby Backpack</h1>
-                    </div>
-                </a>
-                <a href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-hoodie-by-canterbury?variant=41751223074913" style="text-decoration: none; color: #041e42">
-                    <div class="shop-card2">
-                        <img src="images/shop4.webp" class="shop-image2">
-                        <h1>Canterbury Club Hoodie</h1>
-                    </div>
-                </a>
+          </a>
+          <a
+            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club"
+            style="text-decoration: none; color: #041e42"
+          >
+            <div class="shop-card1">
+              <h1>World Rugby Shop</h1>
+              <p>Gear for everybody</p>
+              <img src="images/wrs.webp" class="shop-image" />
             </div>
-            <div class="shop-donate">
-
+          </a>
+          <a href="" style="text-decoration: none; color: #041e42">
+            <div class="shop-card1">
+              <h1>Our Merch</h1>
+              <p>Coming Soon</p>
+              <p>
+                <img src="images/merch.webp" class="shop-image" />
+              </p>
             </div>
+          </a>
         </div>
+        <br />
+        <h1 style="text-align: center; color: #041e42; font-size: 3rem">
+          Our Picks
+        </h1>
+        <br />
+        <div class="shop-body2">
+          <a
+            href="https://www.worldrugbyshop.com/products/georgetown-university-rfc-classic-long-sleeve-hooped-rugby-jersey?variant=41751236935777"
+            style="text-decoration: none; color: #041e42"
+          >
+            <div class="shop-card2">
+              <img src="images/shop1.webp" class="shop-image2" />
+              <h1>Long Sleeve Hooped Rugby Jersey</h1>
+            </div>
+          </a>
+          <a
+            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-dry-polo-by-canterbury"
+            style="text-decoration: none; color: #041e42"
+          >
+            <div class="shop-card2">
+              <img src="images/shop2.jpg" class="shop-image2" />
+              <h1>Canterbury Dry Polo</h1>
+            </div>
+          </a>
+          <a
+            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-free-form-rugby-backpack"
+            style="text-decoration: none; color: #041e42"
+          >
+            <div class="shop-card2">
+              <img src="images/shop3.webp" class="shop-image2" />
+              <h1>GURFC Free Form Rugby Backpack</h1>
+            </div>
+          </a>
+          <a
+            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-hoodie-by-canterbury?variant=41751223074913"
+            style="text-decoration: none; color: #041e42"
+          >
+            <div class="shop-card2">
+              <img src="images/shop4.webp" class="shop-image2" />
+              <h1>Canterbury Club Hoodie</h1>
+            </div>
+          </a>
+        </div>
+        <div class="shop-donate"></div>
+      </div>
     </section>
     <section>
-        <div class="footer__container">
-            <div class="footer__logo">
-                    <a href="/" id="footer__logo">
-                            <img src="images/logo.png"
-                            width="100"
-                            height="100">
-                    </a>
-                    <p>©2024 All rights reserved</p>
-            </div>
-            <div class="social__icons">
-                <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-        
-            </div>
-
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="/" id="footer__logo">
+            <img src="images/logo.png" width="100" height="100" />
+          </a>
+          <p>©2024 All rights reserved</p>
         </div>
+        <div class="social__icons">
+          <a href="/" class="social__icon--link" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="/" class="social__icon--link" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="/" class="social__icon--link" target="_blank"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+      </div>
     </section>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
