--- a/watch.html
+++ b/watch.html
@@ -1,100 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GURFC|Join</title>
-    <script src="https://kit.fontawesome.com/2601b20e92.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/2601b20e92.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!--navigation bar-->
     <nav class="navbar">
-        <div class="navbar__container">
-            <div class="navbar__wide">
-                <a href="index.html" id="navbar__logo">
-                    <img src="images/logo.png" width="80" height="80">
-                </a>
-                <ul class="navbar__menu">
-                    <li class="navbar__item">
-                        <a href="shop.html" class="navbar__links">Shop</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="us.html" class="navbar__links">About</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="roster.html" class="navbar__links">Roster</a>
-                    </li>
-                    <li class="navbar__item">
-                        <a href="match.html" class="navbar__links">Watch</a>    
-                    </li>
-                    <li class="navbar__btn">
-                        <a href="watch.html" class="button">Join GURFC</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="navbar__toggle" id="mobile-menu">
-                <br>
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+      <div class="navbar__container">
+        <div class="navbar__wide">
+          <a href="index.html" id="navbar__logo">
+            <img src="images/logo.png" width="80" height="80" />
+          </a>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="shop.html" class="navbar__links">Shop</a>
+            </li>
+            <li class="navbar__item">
+              <a href="us.html" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+              <a href="roster.html" class="navbar__links">Roster</a>
+            </li>
+            <li class="navbar__item">
+              <a href="match.html" class="navbar__links">Watch</a>
+            </li>
+            <li class="navbar__btn">
+              <a href="watch.html" class="button">Join GURFC</a>
+            </li>
+          </ul>
         </div>
+        <div class="navbar__toggle" id="mobile-menu">
+          <br />
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </div>
     </nav>
     <!-- About Section -->
-        <div class="watch__body">
-            <div class="shape">
-                <div class="shop-header">
-                    <h1>Join</h1>
-                    <h2>GURFC</h2>
-                </div>
-            </div>
-            <div class="about__main">
-                <div class="about__container">
-                        <div class="about__content">
-                            <h2>Dear Prospective Players,</h2>
-                            <p>Georgetown Rugby welcomes you to  practice with us on Cooper Field each Tuesday and Thursday from 7pm to 9pm during the academic year. Absolutely no prior experience is required to join the team. Many GURFC legends have started their rugby careers with our team, and now we invite you to join us in the hunt for the national title. </p>
-                        </div>
-                </div>
-                <button class="join__btn"><b>Are You Ready?</b></button>
-                <hr>
-                <div id="joinimg" style="margin-top: 12px;"></div>
-            </div>
-            <div class="join-blog">
-                <div class="join-articles">
-                    <div class="article-card">
-                    </div>
-                    <div class="article-card">
-                    </div>
-                    <div class="article-card">
-                    </div>
-                    <div class="article-card">
-                    </div>
-                </div>
-            </div>
+    <div class="watch__body">
+      <div class="shape">
+        <div class="shop-header">
+          <h1>Join</h1>
+          <h2>GURFC</h2>
         </div>
+      </div>
+      <div class="about__main">
+        <div class="about__container">
+          <div class="about__content">
+            <h2>Dear Prospective Players,</h2>
+            <p>
+              Georgetown Rugby welcomes you to practice with us on Cooper Field
+              each Tuesday and Thursday from 7pm to 9pm during the academic
+              year. Absolutely no prior experience is required to join the team.
+              Many GURFC legends have started their rugby careers with our team,
+              and now we invite you to join us in the hunt for the national
+              title.
+            </p>
+          </div>
+        </div>
+        <button class="join__btn"><b>Are You Ready?</b></button>
+        <hr />
+        <div id="joinimg" style="margin-top: 12px"></div>
+      </div>
+      <div class="join-blog">
+        <div class="join-articles">
+          <div class="article-card"></div>
+          <div class="article-card"></div>
+          <div class="article-card"></div>
+          <div class="article-card"></div>
+        </div>
+      </div>
+    </div>
     <!--Footer Section-->
     <div class="footer__container">
-        <div class="footer__logo">
-                <a href="/" id="footer__logo">
-                        <img src="images/logo.png"
-                        width="80"
-                        height="80">
-                 </a>
-                 <p>©2024 All rights reserved</p>
-        </div>
-        <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="/" class="social__icon--link" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-    
-        </div>
-
+      <div class="footer__logo">
+        <a href="/" id="footer__logo">
+          <img src="images/logo.png" width="80" height="80" />
+        </a>
+        <p>©2024 All rights reserved</p>
+      </div>
+      <div class="social__icons">
+        <a href="/" class="social__icon--link" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="/" class="social__icon--link" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="/" class="social__icon--link" target="_blank"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+      </div>
     </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
